compiler/lib/test/parser_golden/fstring_unbalanced_format.golden
ERROR: 1:2:
  |
1 | f"Unbalanced format {name:}:10}"
  |  ^^^
unexpected ""Un"
expecting "%=", "&=", "**=", "*=", "+=", "-=", "//=", "/=", "<<=", ">>=", "@=", "^=", "|=", ':', '=', call arguments, slice/index expression, or comma
